# kiln

./: .dockerignore  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  BENCH_PROJT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MACOS_MLX_PLAN.md  MARLIN_MLP_BENCH.md  PROFILING-MTP-C39.md  PROFILING-MTP-C40.md  PROFILING-MTP-C40b.md  PROFILING-MTP-C40d.md  PROFILING-MTP-C40e.md  PROFILING-MTP-C40f.md  PROFILING.md  QUICKSTART.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  deny.toml  kiln.example.toml
.github/: PULL_REQUEST_TEMPLATE.md  (+1 more)
crates/kiln-conv1d-kernel/: Cargo.toml  build.rs
crates/kiln-conv1d-kernel/csrc/: causal_conv1d_update.cu  causal_conv1d_update.h
crates/kiln-conv1d-kernel/src/: lib.rs
crates/kiln-core/: Cargo.toml
crates/kiln-core/src/: block.rs  config.rs  lib.rs  prefix_cache.rs  request.rs  sampling.rs  token.rs  tokenizer.rs  vram.rs
crates/kiln-core/test_fixtures/: deepseek_v3_chat_template.jinja  mistral_7b_instruct_v03_chat_template.jinja
crates/kiln-flash-attn/: Cargo.toml  build.rs
crates/kiln-flash-attn/csrc/flash_attn/: flash_api_c.cu  flash_api_c.h
crates/kiln-flash-attn/csrc/flash_attn/src/: flash.h  flash_bwd_launch_template.h  flash_fwd_kernel.h  flash_fwd_launch_template.h
crates/kiln-flash-attn/src/: lib.rs
crates/kiln-flce-kernel/: Cargo.toml
crates/kiln-flce-kernel/src/: lib.rs  phase_b.rs  tests.rs
crates/kiln-gated-rms-norm-kernel/: Cargo.toml  build.rs
crates/kiln-gated-rms-norm-kernel/csrc/: fused_gated_rmsnorm.cu  fused_gated_rmsnorm.h
crates/kiln-gated-rms-norm-kernel/src/: lib.rs
crates/kiln-gdn-kernel/: Cargo.toml  build.rs
crates/kiln-gdn-kernel/csrc/: gdn_chunk_prep.cu  gdn_chunk_prep.h  gdn_chunk_scan.cu  gdn_chunk_scan.h  gdn_full_chunk.cu  gdn_full_chunk.h  gdn_full_chunk_forward.cu  gdn_full_chunk_forward.h  gdn_fwd_sub.cu  gdn_fwd_sub.h  gdn_gated_rms_norm.cu  gdn_gated_rms_norm.h  gdn_gates.cu  gdn_gates.h  recurrent_gdn_fwd.cu  recurrent_gdn_fwd.h
crates/kiln-gdn-kernel/examples/: gates_bench.rs
crates/kiln-gdn-kernel/src/: lib.rs
crates/kiln-gdn-kernel/tests/: gated_rms_norm_parity.rs  gates_parity.rs  recurrent_fused_norm_parity.rs
crates/kiln-marlin-gemm/: Cargo.toml  build.rs
crates/kiln-marlin-gemm/csrc/: marlin_kernel.cu  marlin_kernel.h
crates/kiln-marlin-gemm/src/: lib.rs
crates/kiln-marlin-gemm/tests/: parity.rs
crates/kiln-model/: Cargo.toml
crates/kiln-model/src/: adapter_merge.rs  c1_attr.rs  cancel.rs  cuda_graph.rs  engine.rs  forward.rs  fp8.rs  generate.rs  kv_cache.rs  lib.rs  loader.rs  lora.rs  lora_loader.rs  marlin_proj.rs  mtp_debug.rs  paged_kv_cache.rs  quantized.rs  sampling.rs  speculative.rs  transposed_weight_cache.rs  weights.rs
crates/kiln-model/src/backend/: cpu.rs  cuda.rs  metal.rs  mlx.rs  mod.rs  vulkan.rs
crates/kiln-model/tests/: marlin_qproj_parity.rs  mtp_byte_eq.rs  parity_q_proj_marlin.rs
crates/kiln-nvtx/: Cargo.toml  build.rs
crates/kiln-nvtx/src/: lib.rs
crates/kiln-rmsnorm-kernel/: Cargo.toml  build.rs
crates/kiln-rmsnorm-kernel/csrc/: fused_l2_qk_norm.cu  fused_l2_qk_norm.h  fused_rmsnorm.cu  fused_rmsnorm.h  fused_rmsnorm_bwd.cu  fused_rmsnorm_bwd.h
crates/kiln-rmsnorm-kernel/examples/: phase10_microbench.rs
crates/kiln-rmsnorm-kernel/src/: lib.rs
crates/kiln-scheduler/: Cargo.toml
crates/kiln-scheduler/src/: lib.rs  scheduler.rs
crates/kiln-server/: Cargo.toml
crates/kiln-server/examples/: flce_phase_a_validation_bench.rs  flce_preflight_bench.rs  phase10_rmsnorm_bench.rs
crates/kiln-server/src/: batching_engine.rs  bench.rs  cli.rs  config.rs  decode_stats.rs  device.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  recent_requests.rs  sidecar.rs  state.rs  training_queue.rs  ui.html
crates/kiln-server/src/api/: adapters.rs  completions.rs  config.rs  health.rs  metrics.rs  mod.rs  models.rs  stats.rs  training.rs  ui.rs
crates/kiln-server/tests/: adapter_compose.rs  adapter_download.rs  adapter_merge_concat.rs  adapter_merge_ties.rs  adapter_path_traversal.rs  adapter_upload.rs  real_model_integration.rs  timeout_cancel_drain.rs  training_queue_cap.rs  training_tracked_cap.rs
crates/kiln-train/: Cargo.toml
crates/kiln-train/src/: lib.rs  trainer.rs
crates/kiln-vulkan-kernel/: Cargo.toml  build.rs
crates/kiln-vulkan-kernel/csrc/shaders/: add.comp  add.spv  causal_conv1d.comp  causal_conv1d_state_advance.comp  copy.comp  exp.comp  flash_attn.comp  full_attn_qkv_decode.comp  gated_delta_net.comp  gdn_chunk_prep.comp  gdn_chunk_scan.comp  gdn_decode_gates_recurrent_rmsnorm.comp  gdn_full_chunk_forward.comp  gdn_gated_rms_norm.comp  gdn_gates.comp  gdn_in_proj.comp  gdn_in_proj_decode.comp  gdn_in_proj_decode_batched.comp  gdn_qk_norm.comp  gdn_recurrent_prefill.comp  linear_decode.comp  linear_decode_argmax_batched_blocks.comp  linear_decode_argmax_batched_reduce.comp  linear_decode_argmax_blocks.comp  linear_decode_argmax_reduce.comp  linear_decode_batched.comp  linear_decode_batched_rows2.comp  lm_head.comp  mlp_gate_up_decode.comp  mlp_gate_up_decode_batched.comp  mlp_gate_up_decode_batched_rows2.comp  mul.comp  mul_mm.comp  paged_kv_gather.comp  rms_norm.comp  rms_norm.spv  rope_neox.comp  sigmoid.comp  silu.comp  soft_max.comp  (+2 more)
crates/kiln-vulkan-kernel/examples/: all_in_one.rs  const_write_test.rs  dispatch_test.rs  fill_test.rs  minimal_test.rs  raw_test.rs  raw_vulkan.rs  small_wg_test.rs  storage_buf_test.rs  struct_sizes.rs  thread_id_1_test.rs  thread_id_2_test.rs  thread_id_barrier_test.rs  thread_id_test.rs  vulkan_smoke_test.rs
crates/kiln-vulkan-kernel/src/: buffer.rs  device.rs  kernels.rs  lib.rs  pipeline.rs  vk_raw.rs
crates/kiln-vulkan-kernel/tests/: gdn_parity.rs
desktop/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  tauri.conf.json
desktop/capabilities/: default.json
desktop/docs/: binary-update.md
desktop/icons/: icon.icns
desktop/src/: hf_download.rs  installer.rs  main.rs  poller.rs  settings.rs  supervisor.rs  tray.rs
desktop/ui/: about.html  dashboard.html  index.html  logs.html  settings.html
(+1331 files in other folders)
