[workspace]
resolver = "2"
members = [
    "crates/kiln-core",
    "crates/kiln-model",
    "crates/kiln-scheduler",
    "crates/kiln-server",
    "crates/kiln-train",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ericflo/kiln"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tokenization
tokenizers = { version = "0.21", features = ["http"] }
minijinja = "2"

# Internal crates
kiln-core = { path = "crates/kiln-core" }
kiln-model = { path = "crates/kiln-model" }
kiln-scheduler = { path = "crates/kiln-scheduler" }
kiln-server = { path = "crates/kiln-server" }
kiln-train = { path = "crates/kiln-train" }
