[workspace]
resolver = "2"
members = [
    "crates/kiln-core",
    "crates/kiln-flash-attn",
    "crates/kiln-gdn-kernel",
    "crates/kiln-model",
    "crates/kiln-nvtx",
    "crates/kiln-rmsnorm-kernel",
    "crates/kiln-scheduler",
    "crates/kiln-server",
    "crates/kiln-train",
]
# kiln-flash-attn, kiln-gdn-kernel, and kiln-rmsnorm-kernel unconditionally
# depend on candle-core/cuda, which pulls cudarc into any
# `cargo build --workspace` and fails to link on non-CUDA hosts (notably
# macOS). They're only compiled when a downstream crate opts in via
# --features cuda, which activates them as optional dependencies.
# Excluding them from default-members lets `cargo check`, `cargo build`, and
# `cargo test` work on any host; Linux+CUDA builds still pull them via feature
# activation on the real binary target.
default-members = [
    "crates/kiln-core",
    "crates/kiln-model",
    "crates/kiln-nvtx",
    "crates/kiln-scheduler",
    "crates/kiln-server",
    "crates/kiln-train",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ericflo/kiln"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tokenization
tokenizers = { version = "0.21", features = ["http"] }
minijinja = "2"

# Model loading
safetensors = "0.5"
memmap2 = "0.9"

# Tensor compute
candle-core = "0.10"
candle-nn = "0.10"
kiln-flash-attn = { path = "crates/kiln-flash-attn" }
kiln-gdn-kernel = { path = "crates/kiln-gdn-kernel" }
kiln-nvtx = { path = "crates/kiln-nvtx" }
kiln-rmsnorm-kernel = { path = "crates/kiln-rmsnorm-kernel" }
# Apple's MLX framework via unofficial Rust bindings. Wave 2 peak-perf
# backend for Apple Silicon — see MACOS_MLX_PLAN.md. Requires full Xcode
# (for the MSL `metal` shader compiler) at build time because `mlx-sys`
# compiles MLX's Metal kernels ahead-of-time, unlike candle-metal which
# JITs at runtime.
mlx-rs = { version = "0.25", default-features = false }

# Random number generation
rand = "0.8"

# Testing
tempfile = "3"

# Internal crates
kiln-core = { path = "crates/kiln-core" }
kiln-model = { path = "crates/kiln-model" }
kiln-scheduler = { path = "crates/kiln-scheduler" }
kiln-server = { path = "crates/kiln-server" }
kiln-train = { path = "crates/kiln-train" }
