[workspace]
resolver = "2"
members = [
    "crates/kiln-core",
    "crates/kiln-conv1d-kernel",
    "crates/kiln-flash-attn",
    "crates/kiln-flce-kernel",
    "crates/kiln-gdn-kernel",
    "crates/kiln-marlin-gemm",
    "crates/kiln-model",
    "crates/kiln-nvtx",
    "crates/kiln-rmsnorm-kernel",
    "crates/kiln-scheduler",
    "crates/kiln-server",
    "crates/kiln-train",
]
# kiln-conv1d-kernel, kiln-flash-attn, kiln-gdn-kernel, kiln-marlin-gemm,
# and kiln-rmsnorm-kernel unconditionally depend on candle-core/cuda, which
# pulls cudarc into any `cargo build --workspace` and fails to link on
# non-CUDA hosts (notably macOS). They're only compiled when a downstream
# crate opts in via --features cuda, which activates them as optional
# dependencies.
# Excluding them from default-members lets `cargo check`, `cargo build`, and
# `cargo test` work on any host; Linux+CUDA builds still pull them via feature
# activation on the real binary target.
default-members = [
    "crates/kiln-core",
    "crates/kiln-flce-kernel",
    "crates/kiln-model",
    "crates/kiln-nvtx",
    "crates/kiln-scheduler",
    "crates/kiln-server",
    "crates/kiln-train",
]

[workspace.package]
version = "0.2.6"
edition = "2024"
license = "MIT"
repository = "https://github.com/ericflo/kiln"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["json", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tokenization
tokenizers = { version = "0.23", features = ["http"] }
minijinja = "2"
minijinja-contrib = { version = "2", features = ["pycompat"] }

# Model loading
safetensors = "0.5"
memmap2 = "0.9"

# Adapter packaging (tar.gz export)
tar = "0.4"
flate2 = "1"

# Tensor compute
candle-core = "0.10"
candle-nn = "0.10"
kiln-conv1d-kernel = { path = "crates/kiln-conv1d-kernel" }
kiln-flash-attn = { path = "crates/kiln-flash-attn" }
kiln-flce-kernel = { path = "crates/kiln-flce-kernel" }
kiln-gdn-kernel = { path = "crates/kiln-gdn-kernel" }
kiln-marlin-gemm = { path = "crates/kiln-marlin-gemm" }
kiln-nvtx = { path = "crates/kiln-nvtx" }
kiln-rmsnorm-kernel = { path = "crates/kiln-rmsnorm-kernel" }
# Random number generation
rand = "0.9"

# Data-parallel iteration
rayon = "1"

# Testing
tempfile = "3"

# Internal crates
kiln-core = { path = "crates/kiln-core" }
kiln-model = { path = "crates/kiln-model" }
kiln-scheduler = { path = "crates/kiln-scheduler" }
kiln-server = { path = "crates/kiln-server" }
kiln-train = { path = "crates/kiln-train" }
