[workspace]
# Empty workspace section intentionally left so this crate is its OWN workspace root
# and is NOT pulled into the parent kiln Cargo workspace.

[package]
name = "kiln-desktop"
version = "0.1.0"
edition = "2021"
description = "Kiln Desktop — system tray app for the kiln local LLM server"
authors = ["Eric Florenzano <eric@eflorenzano.com>"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
