[workspace]
# Empty workspace section intentionally left so this crate is its OWN workspace root
# and is NOT pulled into the parent kiln Cargo workspace.

[package]
name = "kiln-desktop"
version = "0.1.7"
edition = "2021"
description = "Kiln Desktop — system tray app for the kiln local LLM server"
authors = ["Eric Florenzano <eric@eflorenzano.com>"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
dirs = "5"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
semver = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
