[package]
name = "kiln-core"
description = "Core types and traits for Kiln inference server"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokenizers = { workspace = true }
minijinja = { workspace = true }
minijinja-contrib = { workspace = true }
