[package]
name = "kiln-flce-kernel"
description = "Fused Linear Cross-Entropy (FLCE) — chunked cross-entropy over vocab without materializing the full [T, V] logits tensor. Phase A: pure-candle implementation; Phase B will replace the forward kernel with raw CUDA."
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
candle-core = { workspace = true }
anyhow = { workspace = true }

[features]
# Enable the CUDA path in `FlceCustomOp::cuda_fwd`. Without this feature the
# CUDA forward errors out at runtime ("CUDA not enabled"); the CPU path works
# either way. kiln-train re-exports this feature via its own `cuda` feature
# so `cargo build --features cuda --bin kiln-bench` activates it.
cuda = ["candle-core/cuda"]

[dev-dependencies]
candle-nn = { workspace = true }
