[package]
name = "kiln-model"
description = "Model loading and inference runtime for Kiln"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kiln-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
memmap2 = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
kiln-flash-attn = { workspace = true, optional = true }
kiln-gdn-kernel = { workspace = true, optional = true }
kiln-nvtx = { workspace = true }
rand = { workspace = true }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "dep:kiln-flash-attn", "dep:kiln-gdn-kernel"]
# Emit NVTX ranges around the hot paths in `forward.rs` so nsys can attribute
# kernel time per call site. Off by default; pulls in kiln-nvtx's libnvToolsExt
# link line. Pair with `--features cuda,nvtx`.
nvtx = ["kiln-nvtx/nvtx"]

[dev-dependencies]
tempfile = { workspace = true }
