[package]
name = "kiln-server"
description = "HTTP server for Kiln — OpenAI-compatible inference + training API"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "kiln_server"
path = "src/lib.rs"

[[bin]]
name = "kiln"
path = "src/main.rs"

[dependencies]
kiln-core = { workspace = true }
kiln-model = { workspace = true }
kiln-scheduler = { workspace = true }
kiln-train = { workspace = true }
candle-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }

[features]
cuda = ["kiln-model/cuda"]
flash-attn = ["kiln-model/flash-attn"]

[dev-dependencies]
tempfile = { workspace = true }
safetensors = { workspace = true }
candle-core = { workspace = true }
tower = { workspace = true, features = ["util"] }
