[package]
name = "kiln-server"
description = "HTTP server for Kiln — OpenAI-compatible inference + training API"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true

[lib]
name = "kiln_server"
path = "src/lib.rs"

[[bin]]
name = "kiln"
path = "src/main.rs"

[[bin]]
name = "kiln-bench"
path = "src/bench.rs"

[dependencies]
kiln-core = { workspace = true }
kiln-model = { workspace = true }
kiln-scheduler = { workspace = true }
kiln-train = { workspace = true }
candle-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
console = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
# Used to refresh the mtime of composed-adapter cache directories on cache
# hit so LRU eviction sees them as recently used. Already pulled in
# transitively by `tar`, but we depend on it directly to make the use
# explicit.
filetime = "0.2"

[features]
cuda = ["kiln-model/cuda"]
metal = ["kiln-model/metal"]
# Forward kiln-model's NVTX feature so kiln-bench / kiln binaries emit ranges
# under nsys for per-call-site attribution. No effect without --features cuda.
nvtx = ["kiln-model/nvtx"]

[dev-dependencies]
tempfile = { workspace = true }
safetensors = { workspace = true }
candle-core = { workspace = true }
tower = { workspace = true, features = ["util"] }
# Integration tests use filetime to pre-age fake composed-cache entries so
# LRU eviction order is deterministic.
filetime = "0.2"
