[package]
name = "kiln-train"
description = "In-process LoRA training for Kiln — pure Rust, no Python sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kiln-core = { workspace = true }
kiln-model = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[features]
cuda = ["kiln-model/cuda", "flash-attn"]
flash-attn = ["kiln-model/flash-attn"]

[dev-dependencies]
tempfile = { workspace = true }
