[package]
name = "kiln-vulkan-kernel"
description = "Vulkan compute kernels for Kiln (GLSL compute shaders)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
candle-core = { workspace = true }
anyhow = { workspace = true }
half = "2"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
tracing = { workspace = true }
ash = "0.37.3+1.3.269"
libc = "0.2"
libloading = "0.8"
